--- a/package.json
+++ b/package.json
@@ -12,11 +12,19 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@faker-js/faker": "^8.4.1",
     "@mui/icons-material": "^5.15.16",
+    "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.15.16",
     "@mui/x-charts": "^7.3.2",
+    "chart.js": "^4.4.2",
+    "chartjs-plugin-zoom": "^2.0.1",
+    "downloadjs": "^1.4.7",
+    "plotly.js": "^2.32.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18.2.0",
+    "react-plotly.js": "^2.6.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
