--- a/package.json
+++ b/package.json
@@ -12,31 +12,25 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "@faker-js/faker": "^8.4.1",
     "@mui/icons-material": "^5.15.16",
     "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.15.16",
-    "@mui/x-charts": "^7.3.2",
     "@mui/x-data-grid": "^7.3.2",
     "chart.js": "^4.4.2",
     "chartjs-plugin-zoom": "^2.0.1",
     "downloadjs": "^1.4.7",
-    "plotly.js": "^2.32.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18.2.0",
-    "react-plotly.js": "^2.6.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
-    "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "prettier": "3.2.5",
-    "prettier-plugin-organize-imports": "^3.2.4",
     "vite": "^5.2.0"
   }
 }
