builds: add @rollup/rollup-linux-x64-gnu to fix workflow problem

--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "prettier": "3.2.5",
     "vite": "^5.2.0"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "^4.17.2"
   }
 }
