--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,8 @@
-name: Deploy website
+name: CI/CD Pipeline
 
 on:
   pull_request:
     branches: [main]
-
-env:
-  BRANCH_NAME: ${{ github.ref_name }}
 
 permissions:
   contents: read
@@ -22,25 +19,13 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: "npm"
+          cache: 'npm'
 
-      - name: Install Netlify
-        run: npm install netlify-cli@17.10.1 -g
+      - name: Install dependencies
+        run: npm install
 
-      - name: Install Dependencies
-        run: npm ci
+      - name: Run the tests and generate coverage report
+        run: npm test -- --coverage
 
-      - name: Build project
-        run: npm run build
-
-      - name: Deploy to Netlify
-        id: netlify_deploy
-        run: |
-          prod_flag=""
-          if [ "$BRANCH_NAME" = "main" ]; then prod_flag="--prod"; fi
-          netlify deploy \
-            --dir dist \
-            --site ${{ secrets.NETLIFY_SITE_ID }} \
-            --auth ${{ secrets.NETLIFY_API_TOKEN }} \
-            $prod_flag \
-            > deploy_output.txt
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v1
