--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "chart.js": "^4.4.2",
     "chartjs-plugin-zoom": "^2.0.1",
     "downloadjs": "^1.4.7",
+    "highcharts-react-official": "^3.2.1",
+    "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0"
